[gd_scene load_steps=8 format=3 uid="uid://jmn46pvuo8b0"]

[ext_resource type="Script" path="res://interface/core/PauseMenu.gd" id="1_ckura"]
[ext_resource type="Script" path="res://interface/core/PauseMenuOverlay.gd" id="2_nwviw"]

[sub_resource type="InputEventKey" id="InputEventKey_ah2f3"]
device = -1
keycode = 4194305

[sub_resource type="InputEventKey" id="InputEventKey_n10l4"]
device = -1
keycode = 4194306

[sub_resource type="InputEventKey" id="InputEventKey_2uwtj"]
device = -1
keycode = 4194308

[sub_resource type="InputEventKey" id="InputEventKey_6h02r"]
device = -1
keycode = 4194312

[sub_resource type="Shortcut" id="Shortcut_qgrp0"]
events = [SubResource("InputEventKey_ah2f3"), SubResource("InputEventKey_n10l4"), SubResource("InputEventKey_2uwtj"), SubResource("InputEventKey_6h02r")]

[node name="PauseMenu" type="CanvasLayer"]
layer = 2
script = ExtResource("1_ckura")

[node name="Overlay" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0
script = ExtResource("2_nwviw")

[node name="Menu" type="Panel" parent="Overlay"]
self_modulate = Color(1, 1, 1, 0.752941)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.5
offset_top = -63.5
offset_right = 144.5
offset_bottom = 63.5
grow_horizontal = 2
grow_vertical = 2

[node name="Buttons" type="VBoxContainer" parent="Overlay/Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Overlay/Menu/Buttons"]
layout_mode = 2
text = "=PAUSE="
horizontal_alignment = 1

[node name="SaveButton" type="Button" parent="Overlay/Menu/Buttons"]
layout_mode = 2
text = "Save"

[node name="ResumeButton" type="Button" parent="Overlay/Menu/Buttons"]
unique_name_in_owner = true
layout_mode = 2
shortcut = SubResource("Shortcut_qgrp0")
text = "Resume"

[node name="ExitButton" type="Button" parent="Overlay/Menu/Buttons"]
unique_name_in_owner = true
layout_mode = 2
text = "Exit"
